--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
 
+        
     </head>
 
     <body>
@@ -156,7 +157,7 @@
             </div>
 
             <div class="copyright-text">
-                2020 © All Rights Reserved
+                2020 &copy; All Rights Reserved
             </div>
         </footer>
 
